--- a/styles-contact.css
+++ b/styles-contact.css
@@ -61,7 +61,11 @@ html, body {
   padding: 0;
   margin: 0;
   background: #404040; 
-	
+  background-image: url("images/rocks-bg.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center; 
 	
 }
 
@@ -103,6 +107,31 @@ p {
     line-height: 1.6;
     color: #fff;
 }
-    
+nav{
+    font-family: fieldwork, sans-serif;
+    font-size: 1.2em;
+    width: 400px;
+    margin: 0 auto;
+    border: dashed turquoise;
+    border-width: 3xp 0;
+    text-align: center;
+    margin-top: 2em;
+}
+nav li{
+    display: inline;
+}
+nav a{
+    display: inline-block;
+    padding: 10px;
+}
+a{
+    color: #444;
+    text-decoration: none;
+    font-width: bold;
+}
+a:hover{
+    color: black;
+    background: pink;
+}
     
 
